--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         FoundationPress
-Theme URI:          http://foundationpress.olefredrik.com
-Github Theme URI:   https://github.com/olefredrik/FoundationPress
-Description:        FoundationPress is a WordPress starter theme based on Foundation 5 by Zurb
+Theme Name:         Lake Padden
+Theme URI:          www.lakepaddentrailhalf.org
+Github Theme URI:   https://github.com/caseyburton/lake-padden
+Description:        A custom theme based on FoundationPress + Foundation 5
 Version:            1.0.0
-Author:             Ole Fredrik Lie
+Author:             Casey Burton
 Author URI:         http://olefredrik.com/
 
 License:            MIT License
